--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     </main>
     <footer>
         <div>
-            <h1>Influencer products</h1>
+            <h1>Influencer Products</h1>
             <small>Copyright &copy; 2022 influencer products <br> All rights reserved</small><br>
             <i class="fab fa-instagram"></i>
             <i class="fab fa-facebook"></i>
